Fixed action button issue on IE

--- a/src/WebComponents/ActionButton/action-button.scss
+++ b/src/WebComponents/ActionButton/action-button.scss
@@ -32,6 +32,7 @@
 
         span {
             @include flex();
+            -ms-flex: auto;
             padding: 0 var(--theme-h5);
         }
     }
